0023385: Bug in AIS_TexturedShape::Compute()

Mistake in AIS_TexturedShape::Compute() occurred in the patch for issue 22971 corrected