src/AIS/AIS_TexturedShape.cxx
@@ -274,13 +274,12 @@ void AIS_TexturedShape::Compute (const Handle(PrsMgr_PresentationManager3d)& /*t
       Standard_Real prevcoeff;
       Standard_Real newcoeff;
 
-      if (!OwnDeviationAngle (newangle, prevangle) && !OwnDeviationCoefficient (newcoeff, prevcoeff))
+      if (OwnDeviationAngle (newangle, prevangle) || OwnDeviationCoefficient (newcoeff, prevcoeff))
       {
-        break;
-      }
-      if (Abs (newangle - prevangle) > Precision::Angular() || Abs (newcoeff - prevcoeff) > Precision::Confusion())
-      {
-        BRepTools::Clean (myshape);
+        if (Abs (newangle - prevangle) > Precision::Angular() || Abs (newcoeff - prevcoeff) > Precision::Confusion())
+        {
+          BRepTools::Clean (myshape);
+        }
       }
       if (myshape.ShapeType() > TopAbs_FACE)
       {
